--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top nav-color">
             <div class="container">
-                <a href="/ecommerce/index.php" class="navbar-brand">
+                <a href="maxwella1.github.io" class="navbar-brand">
                     <span class="logo-border"> Andrew Maxwell </span>
                 </a>
                 <ul class="nav navbar-nav">
