--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top nav-color">
             <div class="container">
-                <a href="maxwella1.github.io" class="navbar-brand">
+                <a href="/ecommerce/index.php" class="navbar-brand">
                     <span class="logo-border"> Andrew Maxwell </span>
                 </a>
                 <ul class="nav navbar-nav">
@@ -51,6 +51,7 @@
                 <img src="images/prof-pic.png">
             </div>
         </section>
+        <hr class="line">
         <section>
             <div id="section2">
                 <h3>As a student</h3>
@@ -60,6 +61,7 @@
             </div>
             <img src="images/spp-image.png">
         </section>
+        <hr class="line">
         <section>
             <div id="section3">
                 <h3>As an Athlete</h3>
@@ -78,6 +80,7 @@
                 <img src="images/water-polo.jpg">
             </div>
         </section>
+        <hr class="line">
         <section>
             <div id="section4">
                 <h3>Boy Scouts</h3>
@@ -87,6 +90,7 @@
                 <img src="images/me_washburn.jpg">
             </div>
         </section>
+        <hr class="line">
         <section>
             <div id="section5">
                 <h3>Computer Science</h3>
