--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
         <script src="https://code.jquery.com/jquery.min.js"></script>
         <script src="Javascript/bootstrap.min.js"></script>
+        <script src="https://widget.battleforthenet.com/widget.js" async></script>
         
         <!-- Fonts-->
         <link href="https://www.urbanfonts.com/fonts/Pretendo.font" rel="stylesheet">
